--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   sugarcrm-integration:
     build: .
+    environment:
+      - PORT=5000
     ports:
     - '3001:5000'
     volumes:
